[package]
name = "tao"
version = "0.3.0"
description = "Cross-platform window manager library."
authors = [
  "Tauri Programme within The Commons Conservancy",
  "The winit contributors"
]
edition = "2018"
keywords = [ "windowing" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tauri-apps/tao"
documentation = "https://docs.rs/tao"
categories = [ "gui" ]

[package.metadata.docs.rs]
features = [ "serde", "menu", "tray", "dox" ]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "i686-pc-windows-msvc",
  "x86_64-pc-windows-msvc",
  "i686-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin"
]

[features]
default = [ "tray" ]
menu = [ "sourceview" ]
tray = [ "sourceview", "libappindicator" ]
dox = [ "gtk/dox", "sourceview/dox" ]

[dependencies]
instant = "0.1"
lazy_static = "1"
libc = "0.2"
log = "0.4"
serde = { version = "1", optional = true, features = [ "serde_derive" ] }
raw-window-handle = "0.3"
bitflags = "1"

[dev-dependencies]
image = "0.23"
simple_logger = "1.11"

[target."cfg(target_os = \"android\")".dependencies]
ndk = "0.3"
ndk-sys = "0.2"
ndk-glue = "0.3"

[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
objc = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
core-foundation = "0.9"
core-graphics = "0.22"
dispatch = "0.2"
scopeguard = "1.1"

  [target."cfg(target_os = \"macos\")".dependencies.core-video-sys]
  version = "0.1"
  default_features = false
  features = [ "display_link" ]

[target."cfg(target_os = \"macos\")".build-dependencies]
cc = "1"

[target."cfg(target_os = \"windows\")".dependencies]
parking_lot = "0.11"
unicode-segmentation = "1.7.1"

  [target."cfg(target_os = \"windows\")".dependencies.winapi]
  version = "0.3"
  features = [
  "combaseapi",
  "commctrl",
  "dwmapi",
  "errhandlingapi",
  "imm",
  "hidusage",
  "libloaderapi",
  "objbase",
  "ole2",
  "processthreadsapi",
  "shellapi",
  "shellscalingapi",
  "shobjidl_core",
  "unknwnbase",
  "winbase",
  "windowsx",
  "winerror",
  "wingdi",
  "winnt",
  "winnls",
  "winuser",
  "impl-default"
]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
cairo-rs = "0.9"
gio = "0.9"
glib = "0.10"
glib-sys = "0.10"
gtk = { version = "0.9", features = [ "v3_16" ] }
gdk = "0.13"
gdk-sys = "0.10"
gdk-pixbuf = { version = "0.14", features = [ "v2_36_8" ] }
sourceview = { version = "0.9", optional = true }
libappindicator = { version = "0.5", optional = true }
x11-dl = "2.18"
