[package]
name = "tao"
version = "0.10.0"
description = "Cross-platform window manager library."
authors = [
  "Tauri Programme within The Commons Conservancy",
  "The winit contributors"
]
edition = "2021"
rust-version = "1.56"
keywords = [ "windowing" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tauri-apps/tao"
documentation = "https://docs.rs/tao"
categories = [ "gui" ]

[package.metadata.docs.rs]
features = [ "tray", "dox" ]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "i686-pc-windows-msvc",
  "x86_64-pc-windows-msvc",
  "i686-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin"
]

[features]
default = [ ]
tray = [ "libappindicator" ]
dox = [ "gtk/dox" ]

[dependencies]
instant = "0.1"
lazy_static = "1"
libc = "0.2"
log = "0.4"
serde = { version = "1", optional = true, features = [ "serde_derive" ] }
raw-window-handle = "0.4"
bitflags = "1"
crossbeam-channel = "0.5"

[dev-dependencies]
image = "0.24"
env_logger = "0.9"

[target."cfg(target_os = \"android\")".dependencies]
jni = "0.19"
ndk = "0.6"
ndk-sys = "0.3"
ndk-context = "0.1"
once_cell = "1.10"
paste = "1.0"

[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
objc = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
core-foundation = "0.9"
core-graphics = "0.22"
dispatch = "0.2"
scopeguard = "1.1"
png = "0.17"

[target."cfg(target_os = \"macos\")".dependencies.tao-core-video-sys]
version = "0.2"
default_features = false
features = [ "display_link" ]

[target."cfg(target_os = \"macos\")".build-dependencies]
cc = "1"

[target."cfg(target_os = \"windows\")".dependencies]
parking_lot = "0.11"
unicode-segmentation = "1.8.0"
image = { version = "0.24", default-features = false }
windows-implement = "0.37.0"

[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.37.0"
features = [
  "alloc",
  "implement",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_DataExchange",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_Accessibility",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Input_Pointer",
  "Win32_UI_Input_Touch",
  "Win32_UI_Shell",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging"
]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
cairo-rs = "0.15"
gio = "0.15"
glib = "0.15"
glib-sys = "0.15"
gtk = { version = "0.15", features = [ "v3_22" ] }
gdk = { version = "0.15", features = [ "v3_22" ] }
gdk-sys = "0.15"
gdkx11-sys = "0.15"
gdk-pixbuf = { version = "0.15", features = [ "v2_36_8" ] }
libappindicator = { version = "0.7", optional = true }
x11-dl = "2.18"
uuid = { version = "0.8", features = [ "v4" ] }
png = "0.17"
